# angular

./: README.md  package.json
backend/: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
backend/src/handlers/: __init__.py  room_handler.py
backend/src/models/: __init__.py  image.py  room.py
backend/src/repositories/: room_repository.py
src/: index.html  settings.ts  styles.scss
src/app/: app-routing.module.ts  app.module.ts
src/app/home/: home.component.html  home.component.ts
src/app/room/: room.component.html  room.component.scss  room.component.ts
src/repositories/: room.repository.ts
